--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="SWP391_QN" default="default" basedir=".">
-    <description>Builds, tests, and runs the project SWP391_QN.</description>
+<project name="SWP_Test" default="default" basedir=".">
+    <description>Builds, tests, and runs the project SWP_Test.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
